--- a/tinyappProject/views/urls_index.ejs
+++ b/tinyappProject/views/urls_index.ejs
@@ -4,7 +4,7 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <%- include('partials/_headers') %>
+  <% include partials/_headers %>
   <ul>
   <% for(url in urls) { %>
     <li> <%= `${url}: ${urls[url]}` %> </li>
