--- a/tinyappProject/views/urls_new.ejs
+++ b/tinyappProject/views/urls_new.ejs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+
 </head>
-<body style="font-size:20px; padding:50px;>
-  <%- include('partials/_headers') %>
-  <form action="urls/" method="POST" style="margin:150px;">
-      <label for="longURL">Enter a URL:</label>
-      <input id="longURL" type="text" name="longURL" placeholder="http://" style="width: 300px">
-      <input type="submit" value="Submit">
+<body style="font-size:20px; padding:50px;">
+
+  <% include partials/_headers %>
+
+  <form action="/urls" method="POST" style="margin:150px;">
+    <label for="longURL">Enter a URL:</label>
+    <input id="longURL" type="text" name="longURL" placeholder="http://" style="width:300px">
+    <input type="submit" value="Submit">
   </form>
 </body>
 </html>
+
