added in username form to header

--- a/tinyappProject/views/partials/_headers.ejs
+++ b/tinyappProject/views/partials/_headers.ejs
@@ -1,1 +1,8 @@
 <header><h1>HEADER TITLE!</h1></header>
+
+
+<form action="/login" method="POST" style="margin:35px;">
+  <label for="username">Enter Username: </label>
+  <input id="username" type="text" name="username" placeholder="" style="width:150px">
+  <input type="submit" value="Submit">
+</form>
