--- a/tinyappProject/views/partials/_headers.ejs
+++ b/tinyappProject/views/partials/_headers.ejs
@@ -1,7 +1,8 @@
-<header><h1>HEADER TITLE!</h1></header>
+<header><h1>HEADER TITLE</h1></header>
 
+<p>Hello <b><%=username%></b>.</p>
 
-<form action="/login" method="POST" style="margin:30px;">
+<form action="/login" method="POST" style="margin:10px;">
   <label for="username">Enter Username: </label>
   <input id="username" type="text" name="username" placeholder="" style="width:150px">
   <input type="submit" value="Submit">
