can pull in user object to page

--- a/tinyappProject/views/urls_show.ejs
+++ b/tinyappProject/views/urls_show.ejs
@@ -5,6 +5,7 @@
 </head>
 <body>
   <% include partials/_headers %>
+  <p><%=users%></p>
   <p>ShortURL: <%=shortURL%></p>
   <form action="/<%= shortURL %>/update" method="POST" style="margin:10px;">
     <label for="editedLongURL">Update your URL:</label>
