--- a/tinyappProject/views/urls_show.ejs
+++ b/tinyappProject/views/urls_show.ejs
@@ -5,12 +5,12 @@
 </head>
 <body>
   <% include partials/_headers %>
-  <p><%=users%></p>
   <p>ShortURL: <%=shortURL%></p>
   <form action="/<%= shortURL %>/update" method="POST" style="margin:10px;">
     <label for="editedLongURL">Update your URL:</label>
     <input id="editedLongURL" type="text" name="editedLongURL" placeholder="<%=urls[shortURL]%>" style="width:300px">
     <input type="submit" value="Update">
   </form>
+  <p>Created by: <%=users["email"]%></p>
 </body>
 </html>
