fixed issue of long url not showing up on the index page (due to change of urlDatabase object)

--- a/tinyappProject/views/urls_index.ejs
+++ b/tinyappProject/views/urls_index.ejs
@@ -30,7 +30,7 @@
     <% for(url in urls) { %>
     </tr>
     <td><%= url %></td>
-    <td><%= urls[url] %></td>
+    <td><%= urls[url]["url"] %></td>
     <td><a href="/urls/<%= url %>">Edit me</a></td>
     <td>
       <form method="POST" action="/urls/<%= url %>/delete">
