fixed deleting an URL, also added better navigation on view pages

--- a/tinyappProject/views/urls_show.ejs
+++ b/tinyappProject/views/urls_show.ejs
@@ -11,6 +11,6 @@
     <input id="editedLongURL" type="text" name="editedLongURL" placeholder="<%=urls[shortURL]["url"]%>" style="width:300px">
     <input type="submit" value="Update">
   </form>
-  <p>Created by: <%=users["email"]%></p>
+  <P><a href="/urls">Press here to see all your URLs</a></P>
 </body>
 </html>
