--- a/tinyappProject/views/urls_login.ejs
+++ b/tinyappProject/views/urls_login.ejs
@@ -5,7 +5,7 @@
   <title>Login Page</title>
 </head>
 <body>
-  <p>Please enter your login details below,</p>
+  <p>LOG IN HERE</p>
   <form action="/login" method="POST" style="margin:10px;">
     <!-- <label for="userInfo">Please enter your login details below</label> -->
     <input id="email" type="email" name="email" placeholder="Enter email here" style="width:300px" display:"block">
