added better navigation, instead of leading to "hello", you will be redirected to your table or URLs after you login

--- a/tinyappProject/views/urls_register.ejs
+++ b/tinyappProject/views/urls_register.ejs
@@ -4,7 +4,7 @@
   <title>Login Page</title>
 </head>
 <body>
-  <p>Please enter your information below:</p>
+  <p>REGISTER:</p>
   <form action="/register" method="POST" style="margin:10px;">
     <!-- <label for="userInfo">Please enter your details:</label> -->
     <input id="email" type="email" name="email" placeholder="Enter email here" style="width:300px" display:"block">
