new error html page

--- a/tinyappProject/views/urls_index.ejs
+++ b/tinyappProject/views/urls_index.ejs
@@ -20,7 +20,7 @@
   <% include partials/_headers %>
 
   <% if (!user_id) {%>
-  <p>You need to login, or register, to see URLs.</p>
+  <p>Please login or register to see your URLs.</p>
   <% } else {%>
   <table style="width:75%">
     <tr>
