--- a/tinyappProject/views/partials/_headers.ejs
+++ b/tinyappProject/views/partials/_headers.ejs
@@ -3,7 +3,7 @@
 
 
 <%if (!user_id) {%>
-<form action="/toLogin" method="GET" style="margin:10px;">
+<form action="/login" method="GET" style="margin:10px;">
   <input type="submit" value="Login">
 </form>
 <form action="/register" method="GET" style="margin:10px;">
