linted app file, and fixed error status html page

--- a/tinyappProject/views/urls_error.ejs
+++ b/tinyappProject/views/urls_error.ejs
@@ -4,7 +4,7 @@
   <title>Error</title>
 </head>
 <body>
-<p><%=statInfo.txt%></p>
+<p><%=statInfo.txt%>: <%= message%></p>
 <p><img src="<%=statInfo.img%>" alt=""></p>
 
 </body>
