--- a/tinyappProject/views/urls_register.ejs
+++ b/tinyappProject/views/urls_register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login Page</title>
+  <title>Register</title>
 </head>
 <body>
   <p>REGISTER:</p>
@@ -10,5 +10,8 @@
     <input id="email" type="email" name="email" placeholder="Enter email here" style="width:300px" display:"block">
     <input id="password" type="password" name="password" placeholder="Enter password here" style="width:300px">
     <input type="submit" value="Submit">
+  </form>
+  <form action="/login" method="GET" style="margin:10px;">
+  <input type="submit" value="or press here to login">
   </form>
 </html>
